--- a/README
+++ b/README
@@ -9,7 +9,7 @@ An implementation of the kiss package manager in C.
 [ ] checksum
 [ ] download
 [ ] install
-[ ] list
+[.] list
 [ ] remove
 [ ] search
 [ ] update
