append sys_db to KISS_PATH for search

--- a/README
+++ b/README
@@ -14,7 +14,7 @@ An implementation of the kiss package manager in C.
 [ ] install
 [x] list
 [ ] remove
-[.] search
+[x] search
 [ ] update
 [ ] upgrade
 [x] version
